# mlops-v2-gha-demo

./: config-infra-prod.yml  pyproject.toml
.github/workflows/: deploy-batch-endpoint-pipeline-classical.yml  deploy-model-training-pipeline-classical.yml  deploy-online-endpoint-pipeline-classical.yml
data-science/src/: evaluate.py  prep.py  train.py
demand_prediction/notebooks/: EDA.ipynb
infrastructure/modules/resource-group/: main.tf
mlops/azureml/deploy/batch/: batch-deployment.yml  batch-endpoint.yml
mlops/azureml/deploy/online/: online-deployment.yml  online-endpoint.yml
mlops/azureml/train/: data.yml  pipeline.yml  train-env.yml
